--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @items.each do |item| %>
     <tr>
-      <th><img src="<%= item.image %>" alt=""></th>
+      <th><img class="admin-item-thumb" src="<%= item.image %>" alt=""></th>
       <td><%= item.title %></td>
       <td><%= item.description %></td>
       <td><%= item.price %></td>
