--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,7 +4,7 @@
 <% current_user.orders.each do |order| %>
 	<li>
 		Order id: <%= order.id %><br>
-		<%= order.created_at %><br>
+		<%= order.created_at.to_formatted_s(:long_ordinal) %><br>
 		Status: <%= order.status %>
 	</li>
 	<%= link_to "View Order", order_path(order) %>
