--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,9 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+              <% if !current_user.nil? && !current_user.admin? %>
+              <li><%= link_to "View Profile", user_path(current_user) %></li>
+              <% end %>
               <% if !current_user.nil? && current_user.admin? %>
               <li><%= link_to "Admin Dashboard", admin_dashboard_path %></li>
               <% end %>
