All specs passing for paperclip

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @item] do |f| %>
+<%= form_for [:admin, @item], html: { multipart: true } do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
 
@@ -12,7 +12,7 @@
   <%= f.select :category_id, Category.all.collect { |c| [ c.title, c.id ] }, include_blank: false %>
 
   <%= f.label :image %>
-  <%= f.text_field :image %>
+  <%= f.file_field :image %>
 
   <%= f.label :status %>
   <%= f.select :status, ["active", "retired"] %>
