Fixed item index to show image

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
 		<% @items.each do |item| %>
 		<div class="col-md-3 item-card">
 			<div class="item_card index_item_<%= item.id %>">
-				<img class="item-card-img" src="<%= image_tag item.image.url(:medium) %>" alt="">
+				<img class="item-card-img" src="<%= item.image %>" alt="">
 				<h3><%= link_to item.title, item_path(item) %></h3>
 				<% if item.active? %>
 				<%= link_to "Add to Cart", cart_path(item_id: item.id), method: :post, class: "cart-button btn btn-outline-info" %>
