Added formatted price and dollar sign to admin items index

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -16,7 +16,7 @@
       <th><img class="admin-item-thumb" src="<%= item.image %>" alt=""></th>
       <td><%= item.title %></td>
       <td><%= item.description %></td>
-      <td><%= item.price %></td>
+      <td>$<%= item.formatted_price %></td>
       <td><%= item.status %></td>
       <td><%= link_to "Edit", edit_admin_item_path(item) %></td>
     </tr>
