--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -168,6 +168,7 @@ body > div > div.metrics-wrapper > div {
   margin-top: 5px;
 }
 
-
-
-
+.profile {
+  padding-top: 10%;
+  padding-bottom: 20%;
+}
