--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -178,3 +178,8 @@ body > div > div.metrics-wrapper > div {
   background-color: lightgreen;
   text-align: center;
 }
+
+.cart-pad {
+  margin-bottom: 30%;
+
+}
