--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row items-row">
   <div class="col-md-4">
 
-    <img class="item-show-image" src="<%= @item.image %>" alt="">
+    <img class="item-show-image" src="<%= @item.image.url %>" alt="">
   </div>
 
   <div class="col-md-8">
