--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @items.each do |item| %>
     <tr>
-      <th><img class="admin-item-thumb" src="<%= item.image %>" alt=""></th>
+      <th><img class="admin-item-thumb" src="<%= item.image.url %>" alt=""></th>
       <td><%= link_to item.title, item_path(item) %></td>
       <td><%= item.description %></td>
       <td>$<%= item.formatted_price %></td>
