--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -4,14 +4,17 @@
   <hr>
 
   <div class="row">
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-3 col-md-3">
       <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success   btn-block" %>
     </div>
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-3 col-md-3">
       <%= link_to 'Edit Admin', edit_user_path(current_user), type: "button", class: "btn btn-success btn-block" %>
     </div>
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-3 col-md-3">
       <%= link_to 'View Items', admin_items_path, type: "button", class: "btn btn-success btn-block" %>
+    </div>
+    <div class="col-xs-3 col-md-3">
+      <%= link_to 'Manage Stores', admin_stores_path, type: "button", class: "btn btn-success btn-block" %>
     </div>
   </div>
 
