--- a/app/views/stores/items/index.html.erb
+++ b/app/views/stores/items/index.html.erb
@@ -12,22 +12,14 @@
   </thead>
   <tbody>
     <% @items.each do |item| %>
-<<<<<<< HEAD
     <tr class="item">
-=======
-    <tr>
->>>>>>> master
       <th><img class="admin-item-thumb" src="<%= item.image.url %>" alt=""></th>
       <td><%= link_to item.title, item_path(item) %></td>
       <td><%= item.description %></td>
       <td>$<%= item.formatted_price %></td>
       <td><%= item.status %></td>
-      <td><%= link_to "Edit", edit_admin_item_path(item) %></td>
+      <td class="Edit"><%= link_to "Edit", edit_admin_item_path(item) %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
-<<<<<<< HEAD
-=======
-
->>>>>>> master
