--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for @user do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
 
@@ -11,5 +11,5 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit Changes" %>
 <% end %>
