add functionality for user to be able to buy items from multiple stores

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,7 @@
   <%#<h3>Mailing Address: <%= @order.user.address %></h3>%>
 <%#<% end %>%>
 
-<table class="table">
+<table class="table order">
   <thead>
     <th>Title</th>
     <th>Quantity</th>
