--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
               <% if !current_user.nil? && !current_user.admin? %>
               <li><%= link_to "View Profile", user_path(current_user) %></li>
               <% end %>
+              <% if !current_user.nil? && current_user.platform_admin? %>
+              <li><%= link_to 'View Reports', admin_reports_path %></li>
+              <% end %>
               <% if !current_user.nil? && current_user.admin? %>
               <li><%= link_to "Admin Dashboard", admin_dashboard_path %></li>
               <% end %>
@@ -100,4 +103,5 @@
           </div>
         </div>
       </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </html>
