--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><%= image_tag("logo-header.png", alt: "Edit Entry", height: "50px") %></a>
+            <a class="navbar-brand" href="/">Music Emporia</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,6 +37,14 @@
                 <ul class="dropdown-menu">
                   <% all_for_nav.each do |category| %>
                   <li><%= link_to "#{category.title.capitalize}", category_path(category.title) %></li>
+                  <% end %>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Stores<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <% stores_for_nav.each do |store| %>
+                  <li><%= link_to "#{store.name.capitalize}", stores_path(store) %></li>
                   <% end %>
                 </ul>
               </li>
